--- a/16_chapter_natural-language-processing-applications/natural-language-inference-attention.ipynb
+++ b/16_chapter_natural-language-processing-applications/natural-language-inference-attention.ipynb
@@ -405,20 +405,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading ../data/snli_1.0.zip from https://nlp.stanford.edu/projects/snli/snli_1.0.zip...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "read 549367 examples\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "read 549367 examples\n",
       "read 9824 examples\n"
      ]
     }
@@ -521,8 +508,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss 0.496, train acc 0.805, test acc 0.828\n",
-      "20383.2 examples/sec on [device(type='cuda', index=0), device(type='cuda', index=1)]\n"
+      "loss 0.496, train acc 0.805, test acc 0.823\n",
+      "15726.8 examples/sec on [device(type='cuda', index=0)]\n"
      ]
     },
     {
@@ -536,7 +523,7 @@
        "  <rdf:RDF xmlns:dc=\"http://purl.org/dc/elements/1.1/\" xmlns:cc=\"http://creativecommons.org/ns#\" xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\">\n",
        "   <cc:Work>\n",
        "    <dc:type rdf:resource=\"http://purl.org/dc/dcmitype/StillImage\"/>\n",
-       "    <dc:date>2023-08-18T19:29:16.262784</dc:date>\n",
+       "    <dc:date>2025-02-01T13:42:43.936618</dc:date>\n",
        "    <dc:format>image/svg+xml</dc:format>\n",
        "    <dc:creator>\n",
        "     <cc:Agent>\n",
@@ -572,16 +559,16 @@
        "     <g id=\"line2d_1\">\n",
        "      <path d=\"M 30.103125 149.599219 \n",
        "L 30.103125 10.999219 \n",
-       "\" clip-path=\"url(#pbf67311279)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pfaa92dd611)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_2\">\n",
        "      <defs>\n",
-       "       <path id=\"mb0defda810\" d=\"M 0 0 \n",
+       "       <path id=\"m4d29afeab6\" d=\"M 0 0 \n",
        "L 0 3.5 \n",
        "\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use xlink:href=\"#mb0defda810\" x=\"30.103125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m4d29afeab6\" x=\"30.103125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_1\">\n",
@@ -641,11 +628,11 @@
        "     <g id=\"line2d_3\">\n",
        "      <path d=\"M 62.653125 149.599219 \n",
        "L 62.653125 10.999219 \n",
-       "\" clip-path=\"url(#pbf67311279)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pfaa92dd611)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_4\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#mb0defda810\" x=\"62.653125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m4d29afeab6\" x=\"62.653125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_2\">\n",
@@ -688,11 +675,11 @@
        "     <g id=\"line2d_5\">\n",
        "      <path d=\"M 95.203125 149.599219 \n",
        "L 95.203125 10.999219 \n",
-       "\" clip-path=\"url(#pbf67311279)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pfaa92dd611)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_6\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#mb0defda810\" x=\"95.203125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m4d29afeab6\" x=\"95.203125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_3\">\n",
@@ -734,11 +721,11 @@
        "     <g id=\"line2d_7\">\n",
        "      <path d=\"M 127.753125 149.599219 \n",
        "L 127.753125 10.999219 \n",
-       "\" clip-path=\"url(#pbf67311279)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pfaa92dd611)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_8\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#mb0defda810\" x=\"127.753125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m4d29afeab6\" x=\"127.753125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_4\">\n",
@@ -754,11 +741,11 @@
        "     <g id=\"line2d_9\">\n",
        "      <path d=\"M 160.303125 149.599219 \n",
        "L 160.303125 10.999219 \n",
-       "\" clip-path=\"url(#pbf67311279)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pfaa92dd611)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_10\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#mb0defda810\" x=\"160.303125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m4d29afeab6\" x=\"160.303125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_5\">\n",
@@ -808,11 +795,11 @@
        "     <g id=\"line2d_11\">\n",
        "      <path d=\"M 192.853125 149.599219 \n",
        "L 192.853125 10.999219 \n",
-       "\" clip-path=\"url(#pbf67311279)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pfaa92dd611)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_12\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#mb0defda810\" x=\"192.853125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m4d29afeab6\" x=\"192.853125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_6\">\n",
@@ -828,11 +815,11 @@
        "     <g id=\"line2d_13\">\n",
        "      <path d=\"M 225.403125 149.599219 \n",
        "L 225.403125 10.999219 \n",
-       "\" clip-path=\"url(#pbf67311279)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pfaa92dd611)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_14\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#mb0defda810\" x=\"225.403125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m4d29afeab6\" x=\"225.403125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_7\">\n",
@@ -995,16 +982,16 @@
        "     <g id=\"line2d_15\">\n",
        "      <path d=\"M 30.103125 149.599219 \n",
        "L 225.403125 149.599219 \n",
-       "\" clip-path=\"url(#pbf67311279)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pfaa92dd611)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_16\">\n",
        "      <defs>\n",
-       "       <path id=\"m57e7bcd396\" d=\"M 0 0 \n",
+       "       <path id=\"mdcd9ca4321\" d=\"M 0 0 \n",
        "L -3.5 0 \n",
        "\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m57e7bcd396\" x=\"30.103125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#mdcd9ca4321\" x=\"30.103125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_9\">\n",
@@ -1020,11 +1007,11 @@
        "     <g id=\"line2d_17\">\n",
        "      <path d=\"M 30.103125 121.879219 \n",
        "L 225.403125 121.879219 \n",
-       "\" clip-path=\"url(#pbf67311279)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pfaa92dd611)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_18\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m57e7bcd396\" x=\"30.103125\" y=\"121.879219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#mdcd9ca4321\" x=\"30.103125\" y=\"121.879219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_10\">\n",
@@ -1040,11 +1027,11 @@
        "     <g id=\"line2d_19\">\n",
        "      <path d=\"M 30.103125 94.159219 \n",
        "L 225.403125 94.159219 \n",
-       "\" clip-path=\"url(#pbf67311279)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pfaa92dd611)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_20\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m57e7bcd396\" x=\"30.103125\" y=\"94.159219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#mdcd9ca4321\" x=\"30.103125\" y=\"94.159219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_11\">\n",
@@ -1060,11 +1047,11 @@
        "     <g id=\"line2d_21\">\n",
        "      <path d=\"M 30.103125 66.439219 \n",
        "L 225.403125 66.439219 \n",
-       "\" clip-path=\"url(#pbf67311279)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pfaa92dd611)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_22\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m57e7bcd396\" x=\"30.103125\" y=\"66.439219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#mdcd9ca4321\" x=\"30.103125\" y=\"66.439219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_12\">\n",
@@ -1112,11 +1099,11 @@
        "     <g id=\"line2d_23\">\n",
        "      <path d=\"M 30.103125 38.719219 \n",
        "L 225.403125 38.719219 \n",
-       "\" clip-path=\"url(#pbf67311279)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pfaa92dd611)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_24\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m57e7bcd396\" x=\"30.103125\" y=\"38.719219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#mdcd9ca4321\" x=\"30.103125\" y=\"38.719219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_13\">\n",
@@ -1173,11 +1160,11 @@
        "     <g id=\"line2d_25\">\n",
        "      <path d=\"M 30.103125 10.999219 \n",
        "L 225.403125 10.999219 \n",
-       "\" clip-path=\"url(#pbf67311279)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pfaa92dd611)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_26\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m57e7bcd396\" x=\"30.103125\" y=\"10.999219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#mdcd9ca4321\" x=\"30.103125\" y=\"10.999219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_14\">\n",
@@ -1191,63 +1178,63 @@
        "    </g>\n",
        "   </g>\n",
        "   <g id=\"line2d_27\">\n",
-       "    <path d=\"M -1 35.328355 \n",
-       "L 4.044924 38.394835 \n",
-       "L 17.058857 43.950759 \n",
-       "L 30.072789 47.866217 \n",
-       "L 30.103125 47.874937 \n",
-       "L 43.117058 68.836038 \n",
-       "L 56.130991 69.043402 \n",
-       "L 69.144924 69.612485 \n",
-       "L 82.158857 70.351808 \n",
-       "L 95.172789 70.840877 \n",
-       "L 95.203125 70.845295 \n",
-       "L 108.217058 76.376262 \n",
-       "L 121.230991 76.341545 \n",
-       "L 134.244924 76.722247 \n",
-       "L 147.258857 76.925013 \n",
-       "L 160.272789 77.125513 \n",
-       "L 160.303125 77.124747 \n",
-       "L 173.317058 80.644205 \n",
-       "L 186.330991 80.639765 \n",
-       "L 199.344924 80.94797 \n",
-       "L 212.358857 80.85561 \n",
-       "L 225.372789 80.885048 \n",
-       "L 225.403125 80.884294 \n",
-       "\" clip-path=\"url(#pbf67311279)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
+       "    <path d=\"M -1 37.487535 \n",
+       "L 4.044924 40.385793 \n",
+       "L 17.058857 45.559392 \n",
+       "L 30.072789 49.431428 \n",
+       "L 30.103125 49.439313 \n",
+       "L 43.117058 69.239537 \n",
+       "L 56.130991 69.941038 \n",
+       "L 69.144924 70.60824 \n",
+       "L 82.158857 71.074692 \n",
+       "L 95.172789 71.406203 \n",
+       "L 95.203125 71.406121 \n",
+       "L 108.217058 76.593002 \n",
+       "L 121.230991 76.7933 \n",
+       "L 134.244924 76.97976 \n",
+       "L 147.258857 76.986565 \n",
+       "L 160.272789 77.261432 \n",
+       "L 160.303125 77.263493 \n",
+       "L 173.317058 81.154257 \n",
+       "L 186.330991 81.213462 \n",
+       "L 199.344924 80.932604 \n",
+       "L 212.358857 80.932806 \n",
+       "L 225.372789 80.923549 \n",
+       "L 225.403125 80.920799 \n",
+       "\" clip-path=\"url(#pfaa92dd611)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_28\">\n",
-       "    <path d=\"M -1 63.709486 \n",
-       "L 4.044924 61.649099 \n",
-       "L 17.058857 58.130589 \n",
-       "L 30.072789 55.685805 \n",
-       "L 30.103125 55.680094 \n",
-       "L 43.117058 43.399038 \n",
-       "L 56.130991 43.395883 \n",
-       "L 69.144924 43.141166 \n",
-       "L 82.158857 42.768029 \n",
-       "L 95.172789 42.564339 \n",
-       "L 95.203125 42.563266 \n",
-       "L 108.217058 40.07488 \n",
-       "L 121.230991 40.084345 \n",
-       "L 134.244924 39.92512 \n",
-       "L 147.258857 39.84393 \n",
-       "L 160.272789 39.790421 \n",
-       "L 160.303125 39.790595 \n",
-       "L 173.317058 38.007692 \n",
-       "L 186.330991 38.0689 \n",
-       "L 199.344924 37.908413 \n",
-       "L 212.358857 37.990024 \n",
-       "L 225.372789 38.015769 \n",
-       "L 225.403125 38.017751 \n",
-       "\" clip-path=\"url(#pbf67311279)\" style=\"fill: none; stroke-dasharray: 5.55,2.4; stroke-dashoffset: 0; stroke: #bf00bf; stroke-width: 1.5\"/>\n",
+       "    <path d=\"M -1 62.091733 \n",
+       "L 4.044924 60.186839 \n",
+       "L 17.058857 56.938296 \n",
+       "L 30.072789 54.630252 \n",
+       "L 30.103125 54.627287 \n",
+       "L 43.117058 43.183233 \n",
+       "L 56.130991 42.906851 \n",
+       "L 69.144924 42.623317 \n",
+       "L 82.158857 42.426022 \n",
+       "L 95.172789 42.286947 \n",
+       "L 95.203125 42.28726 \n",
+       "L 108.217058 39.904507 \n",
+       "L 121.230991 39.826893 \n",
+       "L 134.244924 39.741286 \n",
+       "L 147.258857 39.746124 \n",
+       "L 160.272789 39.642764 \n",
+       "L 160.303125 39.639978 \n",
+       "L 173.317058 37.746454 \n",
+       "L 186.330991 37.757181 \n",
+       "L 199.344924 37.911779 \n",
+       "L 212.358857 37.947431 \n",
+       "L 225.372789 37.977656 \n",
+       "L 225.403125 37.978141 \n",
+       "\" clip-path=\"url(#pfaa92dd611)\" style=\"fill: none; stroke-dasharray: 5.55,2.4; stroke-dashoffset: 0; stroke: #bf00bf; stroke-width: 1.5\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_29\">\n",
-       "    <path d=\"M 30.103125 40.866503 \n",
-       "L 95.203125 37.31121 \n",
-       "L 160.303125 36.436495 \n",
-       "L 225.403125 34.785823 \n",
-       "\" clip-path=\"url(#pbf67311279)\" style=\"fill: none; stroke-dasharray: 9.6,2.4,1.5,2.4; stroke-dashoffset: 0; stroke: #008000; stroke-width: 1.5\"/>\n",
+       "    <path d=\"M 30.103125 40.259846 \n",
+       "L 95.203125 36.902069 \n",
+       "L 160.303125 36.083787 \n",
+       "L 225.403125 35.491238 \n",
+       "\" clip-path=\"url(#pfaa92dd611)\" style=\"fill: none; stroke-dasharray: 9.6,2.4,1.5,2.4; stroke-dashoffset: 0; stroke: #008000; stroke-width: 1.5\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_3\">\n",
        "    <path d=\"M 30.103125 149.599219 \n",
@@ -1491,7 +1478,7 @@
        "  </g>\n",
        " </g>\n",
        " <defs>\n",
-       "  <clipPath id=\"pbf67311279\">\n",
+       "  <clipPath id=\"pfaa92dd611\">\n",
        "   <rect x=\"30.103125\" y=\"10.999219\" width=\"195.3\" height=\"138.6\"/>\n",
        "  </clipPath>\n",
        " </defs>\n",
@@ -1633,8 +1620,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "d2l-en",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   },
   "required_libs": []
  },
