--- a/16_chapter_natural-language-processing-applications/natural-language-inference-bert.ipynb
+++ b/16_chapter_natural-language-processing-applications/natural-language-inference-bert.ipynb
@@ -320,13 +320,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "read 549367 examples\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "read 549367 examples\n",
       "read 9824 examples\n"
      ]
     }
@@ -481,8 +475,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss 0.520, train acc 0.791, test acc 0.786\n",
-      "10588.8 examples/sec on [device(type='cuda', index=0), device(type='cuda', index=1)]\n"
+      "loss 0.523, train acc 0.789, test acc 0.783\n",
+      "4734.7 examples/sec on [device(type='cuda', index=0)]\n"
      ]
     },
     {
@@ -496,7 +490,7 @@
        "  <rdf:RDF xmlns:dc=\"http://purl.org/dc/elements/1.1/\" xmlns:cc=\"http://creativecommons.org/ns#\" xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\">\n",
        "   <cc:Work>\n",
        "    <dc:type rdf:resource=\"http://purl.org/dc/dcmitype/StillImage\"/>\n",
-       "    <dc:date>2023-08-18T19:45:31.911818</dc:date>\n",
+       "    <dc:date>2025-02-01T13:50:45.763093</dc:date>\n",
        "    <dc:format>image/svg+xml</dc:format>\n",
        "    <dc:creator>\n",
        "     <cc:Agent>\n",
@@ -532,16 +526,16 @@
        "     <g id=\"line2d_1\">\n",
        "      <path d=\"M 30.103125 149.599219 \n",
        "L 30.103125 10.999219 \n",
-       "\" clip-path=\"url(#peb3cdd5285)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pd51e042c63)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_2\">\n",
        "      <defs>\n",
-       "       <path id=\"m3ccc108fa8\" d=\"M 0 0 \n",
+       "       <path id=\"m7a13151f64\" d=\"M 0 0 \n",
        "L 0 3.5 \n",
        "\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m3ccc108fa8\" x=\"30.103125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m7a13151f64\" x=\"30.103125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_1\">\n",
@@ -571,11 +565,11 @@
        "     <g id=\"line2d_3\">\n",
        "      <path d=\"M 78.928125 149.599219 \n",
        "L 78.928125 10.999219 \n",
-       "\" clip-path=\"url(#peb3cdd5285)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pd51e042c63)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_4\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m3ccc108fa8\" x=\"78.928125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m7a13151f64\" x=\"78.928125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_2\">\n",
@@ -615,11 +609,11 @@
        "     <g id=\"line2d_5\">\n",
        "      <path d=\"M 127.753125 149.599219 \n",
        "L 127.753125 10.999219 \n",
-       "\" clip-path=\"url(#peb3cdd5285)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pd51e042c63)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_6\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m3ccc108fa8\" x=\"127.753125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m7a13151f64\" x=\"127.753125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_3\">\n",
@@ -667,11 +661,11 @@
        "     <g id=\"line2d_7\">\n",
        "      <path d=\"M 176.578125 149.599219 \n",
        "L 176.578125 10.999219 \n",
-       "\" clip-path=\"url(#peb3cdd5285)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pd51e042c63)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_8\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m3ccc108fa8\" x=\"176.578125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m7a13151f64\" x=\"176.578125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_4\">\n",
@@ -706,11 +700,11 @@
        "     <g id=\"line2d_9\">\n",
        "      <path d=\"M 225.403125 149.599219 \n",
        "L 225.403125 10.999219 \n",
-       "\" clip-path=\"url(#peb3cdd5285)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pd51e042c63)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_10\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m3ccc108fa8\" x=\"225.403125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m7a13151f64\" x=\"225.403125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_5\">\n",
@@ -877,16 +871,16 @@
        "     <g id=\"line2d_11\">\n",
        "      <path d=\"M 30.103125 149.599219 \n",
        "L 225.403125 149.599219 \n",
-       "\" clip-path=\"url(#peb3cdd5285)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pd51e042c63)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_12\">\n",
        "      <defs>\n",
-       "       <path id=\"me98e39ed7c\" d=\"M 0 0 \n",
+       "       <path id=\"m4f87f56680\" d=\"M 0 0 \n",
        "L -3.5 0 \n",
        "\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use xlink:href=\"#me98e39ed7c\" x=\"30.103125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m4f87f56680\" x=\"30.103125\" y=\"149.599219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_7\">\n",
@@ -932,11 +926,11 @@
        "     <g id=\"line2d_13\">\n",
        "      <path d=\"M 30.103125 121.879219 \n",
        "L 225.403125 121.879219 \n",
-       "\" clip-path=\"url(#peb3cdd5285)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pd51e042c63)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_14\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#me98e39ed7c\" x=\"30.103125\" y=\"121.879219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m4f87f56680\" x=\"30.103125\" y=\"121.879219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_8\">\n",
@@ -952,11 +946,11 @@
        "     <g id=\"line2d_15\">\n",
        "      <path d=\"M 30.103125 94.159219 \n",
        "L 225.403125 94.159219 \n",
-       "\" clip-path=\"url(#peb3cdd5285)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pd51e042c63)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_16\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#me98e39ed7c\" x=\"30.103125\" y=\"94.159219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m4f87f56680\" x=\"30.103125\" y=\"94.159219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_9\">\n",
@@ -972,11 +966,11 @@
        "     <g id=\"line2d_17\">\n",
        "      <path d=\"M 30.103125 66.439219 \n",
        "L 225.403125 66.439219 \n",
-       "\" clip-path=\"url(#peb3cdd5285)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pd51e042c63)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_18\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#me98e39ed7c\" x=\"30.103125\" y=\"66.439219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m4f87f56680\" x=\"30.103125\" y=\"66.439219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_10\">\n",
@@ -1024,11 +1018,11 @@
        "     <g id=\"line2d_19\">\n",
        "      <path d=\"M 30.103125 38.719219 \n",
        "L 225.403125 38.719219 \n",
-       "\" clip-path=\"url(#peb3cdd5285)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pd51e042c63)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_20\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#me98e39ed7c\" x=\"30.103125\" y=\"38.719219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m4f87f56680\" x=\"30.103125\" y=\"38.719219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_11\">\n",
@@ -1085,11 +1079,11 @@
        "     <g id=\"line2d_21\">\n",
        "      <path d=\"M 30.103125 10.999219 \n",
        "L 225.403125 10.999219 \n",
-       "\" clip-path=\"url(#peb3cdd5285)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pd51e042c63)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_22\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#me98e39ed7c\" x=\"30.103125\" y=\"10.999219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m4f87f56680\" x=\"30.103125\" y=\"10.999219\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_12\">\n",
@@ -1103,78 +1097,78 @@
        "    </g>\n",
        "   </g>\n",
        "   <g id=\"line2d_23\">\n",
-       "    <path d=\"M -1 26.147652 \n",
-       "L 0.753521 27.858582 \n",
-       "L 10.491219 33.25736 \n",
-       "L 20.228917 36.882676 \n",
-       "L 29.966615 39.582609 \n",
-       "L 30.103125 39.621611 \n",
-       "L 39.840823 56.020699 \n",
-       "L 49.578521 56.340137 \n",
-       "L 59.316219 57.028425 \n",
-       "L 69.053917 57.779339 \n",
-       "L 78.791615 58.409606 \n",
-       "L 78.928125 58.418011 \n",
-       "L 88.665823 66.895114 \n",
-       "L 98.403521 66.758577 \n",
-       "L 108.141219 66.712417 \n",
-       "L 117.878917 66.804867 \n",
-       "L 127.616615 66.854498 \n",
-       "L 127.753125 66.844186 \n",
-       "L 137.490823 73.35417 \n",
-       "L 147.228521 73.100502 \n",
-       "L 156.966219 72.926417 \n",
-       "L 166.703917 72.811912 \n",
-       "L 176.441615 72.859341 \n",
-       "L 176.578125 72.859622 \n",
-       "L 186.315823 78.275571 \n",
-       "L 196.053521 77.895357 \n",
-       "L 205.791219 77.503884 \n",
-       "L 215.528917 77.442551 \n",
-       "L 225.266615 77.557256 \n",
-       "L 225.403125 77.553091 \n",
-       "\" clip-path=\"url(#peb3cdd5285)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
+       "    <path d=\"M -1 22.86421 \n",
+       "L 0.753521 24.816162 \n",
+       "L 10.491219 31.037333 \n",
+       "L 20.228917 35.03259 \n",
+       "L 29.966615 37.9798 \n",
+       "L 30.103125 38.019885 \n",
+       "L 39.840823 55.346318 \n",
+       "L 49.578521 56.072466 \n",
+       "L 59.316219 56.658468 \n",
+       "L 69.053917 57.187187 \n",
+       "L 78.791615 57.746059 \n",
+       "L 78.928125 57.762632 \n",
+       "L 88.665823 65.48964 \n",
+       "L 98.403521 65.775038 \n",
+       "L 108.141219 66.204324 \n",
+       "L 117.878917 66.255516 \n",
+       "L 127.616615 66.447809 \n",
+       "L 127.753125 66.460408 \n",
+       "L 137.490823 73.316791 \n",
+       "L 147.228521 73.038497 \n",
+       "L 156.966219 72.717793 \n",
+       "L 166.703917 72.594213 \n",
+       "L 176.441615 72.417162 \n",
+       "L 176.578125 72.415567 \n",
+       "L 186.315823 77.988167 \n",
+       "L 196.053521 77.964851 \n",
+       "L 205.791219 77.542055 \n",
+       "L 215.528917 77.349465 \n",
+       "L 225.266615 77.085745 \n",
+       "L 225.403125 77.086021 \n",
+       "\" clip-path=\"url(#pd51e042c63)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_24\">\n",
-       "    <path d=\"M -1 69.339258 \n",
-       "L 0.753521 68.074569 \n",
-       "L 10.491219 64.345866 \n",
-       "L 20.228917 62.001142 \n",
-       "L 29.966615 60.330942 \n",
-       "L 30.103125 60.310127 \n",
-       "L 39.840823 50.539585 \n",
-       "L 49.578521 50.334027 \n",
-       "L 59.316219 50.002817 \n",
-       "L 69.053917 49.614261 \n",
-       "L 78.791615 49.291314 \n",
-       "L 78.928125 49.286047 \n",
-       "L 88.665823 45.115402 \n",
-       "L 98.403521 45.178651 \n",
-       "L 108.141219 45.20395 \n",
-       "L 117.878917 45.11983 \n",
-       "L 127.616615 45.113884 \n",
-       "L 127.753125 45.117454 \n",
-       "L 137.490823 41.778417 \n",
-       "L 147.228521 42.047855 \n",
-       "L 156.966219 42.094237 \n",
-       "L 166.703917 42.131976 \n",
-       "L 176.441615 42.153101 \n",
-       "L 176.578125 42.155817 \n",
-       "L 186.315823 39.713989 \n",
-       "L 196.053521 39.856931 \n",
-       "L 205.791219 40.013787 \n",
-       "L 215.528917 40.095061 \n",
-       "L 225.266615 40.017582 \n",
-       "L 225.403125 40.016647 \n",
-       "\" clip-path=\"url(#peb3cdd5285)\" style=\"fill: none; stroke-dasharray: 5.55,2.4; stroke-dashoffset: 0; stroke: #bf00bf; stroke-width: 1.5\"/>\n",
+       "    <path d=\"M -1 72.04746 \n",
+       "L 0.753521 70.523547 \n",
+       "L 10.491219 66.156035 \n",
+       "L 20.228917 63.463445 \n",
+       "L 29.966615 61.533167 \n",
+       "L 30.103125 61.503208 \n",
+       "L 39.840823 50.838117 \n",
+       "L 49.578521 50.519978 \n",
+       "L 59.316219 50.21238 \n",
+       "L 69.053917 49.947896 \n",
+       "L 78.791615 49.640445 \n",
+       "L 78.928125 49.63219 \n",
+       "L 88.665823 45.81493 \n",
+       "L 98.403521 45.558141 \n",
+       "L 108.141219 45.400863 \n",
+       "L 117.878917 45.358276 \n",
+       "L 127.616615 45.281872 \n",
+       "L 127.753125 45.279172 \n",
+       "L 137.490823 42.204711 \n",
+       "L 147.228521 42.159805 \n",
+       "L 156.966219 42.292837 \n",
+       "L 166.703917 42.317293 \n",
+       "L 176.441615 42.414696 \n",
+       "L 176.578125 42.414162 \n",
+       "L 186.315823 39.908795 \n",
+       "L 196.053521 39.875905 \n",
+       "L 205.791219 40.060591 \n",
+       "L 215.528917 40.13807 \n",
+       "L 225.266615 40.263998 \n",
+       "L 225.403125 40.265658 \n",
+       "\" clip-path=\"url(#pd51e042c63)\" style=\"fill: none; stroke-dasharray: 5.55,2.4; stroke-dashoffset: 0; stroke: #bf00bf; stroke-width: 1.5\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_25\">\n",
-       "    <path d=\"M 30.103125 49.839386 \n",
-       "L 78.928125 46.55215 \n",
-       "L 127.753125 43.617623 \n",
-       "L 176.578125 41.811759 \n",
-       "L 225.403125 40.711312 \n",
-       "\" clip-path=\"url(#peb3cdd5285)\" style=\"fill: none; stroke-dasharray: 9.6,2.4,1.5,2.4; stroke-dashoffset: 0; stroke: #008000; stroke-width: 1.5\"/>\n",
+       "    <path d=\"M 30.103125 49.613653 \n",
+       "L 78.928125 45.381161 \n",
+       "L 127.753125 43.97033 \n",
+       "L 176.578125 42.64415 \n",
+       "L 225.403125 41.007586 \n",
+       "\" clip-path=\"url(#pd51e042c63)\" style=\"fill: none; stroke-dasharray: 9.6,2.4,1.5,2.4; stroke-dashoffset: 0; stroke: #008000; stroke-width: 1.5\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_3\">\n",
        "    <path d=\"M 30.103125 149.599219 \n",
@@ -1418,7 +1412,7 @@
        "  </g>\n",
        " </g>\n",
        " <defs>\n",
-       "  <clipPath id=\"peb3cdd5285\">\n",
+       "  <clipPath id=\"pd51e042c63\">\n",
        "   <rect x=\"30.103125\" y=\"10.999219\" width=\"195.3\" height=\"138.6\"/>\n",
        "  </clipPath>\n",
        " </defs>\n",
@@ -1475,8 +1469,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "d2l-en",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   },
   "required_libs": []
  },
