--- a/16_chapter_natural-language-processing-applications/natural-language-inference-and-dataset.ipynb
+++ b/16_chapter_natural-language-processing-applications/natural-language-inference-and-dataset.ipynb
@@ -77,7 +77,15 @@
      "pytorch"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading ../data/snli_1.0.zip from https://nlp.stanford.edu/projects/snli/snli_1.0.zip...\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import re\n",
@@ -387,13 +395,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "read 549367 examples\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "read 549367 examples\n",
       "read 9824 examples\n"
      ]
     },
@@ -427,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "4f3cf1e7",
    "metadata": {
     "execution": {
@@ -495,8 +497,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "d2l-en",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   },
   "required_libs": []
  },
