--- a/2_chapter_preliminaries/linear-algebra.ipynb
+++ b/2_chapter_preliminaries/linear-algebra.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 1,
    "id": "dc36b473",
    "metadata": {
     "execution": {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 2,
    "id": "4fc9ba1d",
    "metadata": {
     "execution": {
@@ -111,7 +111,7 @@
        "(tensor(5.), tensor(6.), tensor(1.5000), tensor(9.))"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 3,
    "id": "91cd966f",
    "metadata": {
     "execution": {
@@ -180,7 +180,7 @@
        "tensor([0, 1, 2])"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 4,
    "id": "ba15a197",
    "metadata": {
     "execution": {
@@ -235,7 +235,7 @@
        "tensor(2)"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 5,
    "id": "871cd7e6",
    "metadata": {
     "execution": {
@@ -281,7 +281,7 @@
        "3"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 6,
    "id": "34ea04c3",
    "metadata": {
     "execution": {
@@ -325,7 +325,7 @@
        "torch.Size([3])"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 7,
    "id": "80c49751",
    "metadata": {
     "execution": {
@@ -405,7 +405,7 @@
        "        [4, 5]])"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 8,
    "id": "7ef1e23b",
    "metadata": {
     "execution": {
@@ -468,7 +468,7 @@
        "        [1, 3, 5]])"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 9,
    "id": "028e06ed",
    "metadata": {
     "execution": {
@@ -515,7 +515,7 @@
        "        [True, True, True]])"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 10,
    "id": "306d610e",
    "metadata": {
     "execution": {
@@ -603,7 +603,7 @@
        "         [20, 21, 22, 23]]])"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 11,
    "id": "53a34bc0",
    "metadata": {
     "execution": {
@@ -655,7 +655,7 @@
        "         [ 6.,  8., 10.]]))"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 12,
    "id": "1e2c0645",
    "metadata": {
     "execution": {
@@ -716,7 +716,7 @@
        "        [ 9., 16., 25.]])"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 13,
    "id": "c5c86fb1",
    "metadata": {
     "execution": {
@@ -767,7 +767,7 @@
        " torch.Size([2, 3, 4]))"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 14,
    "id": "5a3c4cbd",
    "metadata": {
     "execution": {
@@ -816,7 +816,7 @@
        "(tensor([0., 1., 2.]), tensor(3.))"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 15,
    "id": "7594e574",
    "metadata": {
     "execution": {
@@ -863,7 +863,7 @@
        "(torch.Size([2, 3]), tensor(15.))"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 16,
    "id": "14d191be",
    "metadata": {
     "execution": {
@@ -914,7 +914,7 @@
        "(torch.Size([2, 3]), torch.Size([3]))"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 17,
    "id": "ee3c0559",
    "metadata": {
     "execution": {
@@ -956,7 +956,7 @@
        "(torch.Size([2, 3]), torch.Size([2]))"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 18,
    "id": "25b99ea4",
    "metadata": {
     "execution": {
@@ -999,7 +999,7 @@
        "tensor(True)"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 19,
    "id": "9f41e037",
    "metadata": {
     "execution": {
@@ -1046,7 +1046,7 @@
        "(tensor(2.5000), tensor(2.5000))"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 20,
    "id": "f268d8be",
    "metadata": {
     "execution": {
@@ -1089,7 +1089,7 @@
        "(tensor([1.5000, 2.5000, 3.5000]), tensor([1.5000, 2.5000, 3.5000]))"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 21,
    "id": "863c5aca",
    "metadata": {
     "execution": {
@@ -1131,21 +1131,17 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(tensor([[ 3.],\n",
-       "         [12.]]),\n",
-       " torch.Size([2, 1]))"
-      ]
-     },
-     "execution_count": 211,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 3.],\n",
+      "        [12.]]) torch.Size([2, 1])\n"
+     ]
     }
    ],
    "source": [
     "sum_A = A.sum(axis=1, keepdims=True)\n",
-    "sum_A, sum_A.shape"
+    "print(sum_A, sum_A.shape)"
    ]
   },
   {
@@ -1162,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 22,
    "id": "93d20f26",
    "metadata": {
     "execution": {
@@ -1184,7 +1180,7 @@
        "        [0.2500, 0.3333, 0.4167]])"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1207,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 23,
    "id": "e2de0ae7",
    "metadata": {
     "execution": {
@@ -1229,7 +1225,7 @@
        "        [3., 5., 7.]])"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1262,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 24,
    "id": "5575e11a",
    "metadata": {
     "execution": {
@@ -1283,7 +1279,7 @@
        "(tensor([0., 1., 2.]), tensor([1., 1., 1.]), tensor(3.))"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1306,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 25,
    "id": "b5186254",
    "metadata": {
     "execution": {
@@ -1327,7 +1323,7 @@
        "tensor(3.)"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1437,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 26,
    "id": "1a99c29a",
    "metadata": {
     "execution": {
@@ -1458,7 +1454,7 @@
        "(torch.Size([2, 3]), torch.Size([3]), tensor([ 5., 14.]), tensor([ 5., 14.]))"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1555,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 27,
    "id": "99535047",
    "metadata": {
     "execution": {
@@ -1579,7 +1575,7 @@
        "         [12., 12., 12., 12.]]))"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1637,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 28,
    "id": "e215c544",
    "metadata": {
     "execution": {
@@ -1658,7 +1654,7 @@
        "tensor(5.)"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1690,7 +1686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 29,
    "id": "8a3e0562",
    "metadata": {
     "execution": {
@@ -1711,7 +1707,7 @@
        "tensor(7.)"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1754,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 30,
    "id": "3e00a124",
    "metadata": {
     "execution": {
@@ -1775,7 +1771,7 @@
        "tensor(6.)"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
