--- a/3_chapter_linear-regression/synthetic-regression-data.ipynb
+++ b/3_chapter_linear-regression/synthetic-regression-data.ipynb
@@ -172,8 +172,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "features: tensor([0.9026, 1.0264]) \n",
-      "label: tensor([2.5148])\n"
+      "features: tensor([-0.9066,  1.0911]) \n",
+      "label: tensor([-1.3190])\n"
      ]
     }
    ],
@@ -512,8 +512,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "d2l-en",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   },
   "required_libs": []
  },
